--- a/recipes/baked-ziti.html
+++ b/recipes/baked-ziti.html
@@ -6,6 +6,27 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Baked Ziti</h1>
+    <img src="https://www.allrecipes.com/thmb/nfRbwVcXaGillo2UuQq2I-0ZO4g=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/18031-baked-ziti-ii-DDMFS-4x3-45e614088a504a67b9a9dde7001be4ee.jpg" alt="Baked Ziti">
+    <h3>Description</h3>
+    <p>This easy baked ziti with ricotta, mozzarella, and Parmesan is so good! Three cheeses layered with pasta and marinara sauce — delicious!</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 (16 ounce) package ziti pasta</li>
+        <li>24 ounces ricotta cheese</li>
+        <li>1 pound shredded mozzarella cheese</li>
+        <li>1 large egg, beaten</li>
+        <li>1 (32-ounce) jar spaghetti sauce</li>
+        <li>¼ cup grated Parmesan cheese</li>
+    </ul>
+    <h2>Directions</h2>
+    <ol>
+        <li>Preheat the oven to 375 degrees F (190 degrees C). Lightly grease a 9x13-inch baking dish.</li>
+        <li>Meanwhile, bring a large pot of lightly salted water to a boil. Add ziti pasta and cook for 8 to 10 minutes or until al dente;</li>drain and rinse.
+        <li>Combine cooked ziti, ricotta cheese, mozzarella cheese, egg, and 1 ½ cups spaghetti sauce in a medium bowl.</li>
+        <li>Transfer into the prepared baking dish. Top with remaining spaghetti sauce, then sprinkle with Parmesan cheese.</li>
+        <li>Bake in the preheated oven for 30 minutes; let stand for 15 minutes before serving.</li>
+    </ol>
+    <a href="../index.html">Home</a>
 </body>
 </html>
