--- a/recipes/chicken-alfredo.html
+++ b/recipes/chicken-alfredo.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Chicken Alfredo</h1>
-    <img src="" alt="">
+    <img src="https://www.allrecipes.com/thmb/YLapeTnBgIkJOiD_Vy3Ohh0QeD4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/11970easy-chicken-alfredofabeveryday2x1-a4112dbccf3d4149a18eb45435e77115.jpg" alt="">
     <h3>Description</h3>
     <p>This chicken Alfredo recipe with jar sauce is a quick and easy dinner for those hectic nights. For extra flavor, cook the chicken with lemon pepper and seasoning salt.</p>
     <h2>Ingredients</h2>
