--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="./recipes/baked-ziti.html">Baked Ziti</a></li>
-        <li><a href="./recipes/chicken-alfredo.html">Chicken Alfredo</a></li>
-    </ul>
+    <div class="h1-container">
+        <h1>Odin Recipes</h1>
+    </div>
+    <div class="recipe-container">
+        <ul>
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/baked-ziti.html">Baked Ziti</a></li>
+            <li><a href="./recipes/chicken-alfredo.html">Chicken Alfredo</a></li>
+        </ul>
+    </div>
+   
 </body>
 </html>
